# project-summarizer

./: .pre-commit-config.yaml  README.md  dockerfile  pyproject.toml
.github/workflows/: ci.yml
src/project_summarizer/: main.py
src/project_summarizer/utils/: answer_question.py  downloader.py  summarizer.py
src/summarizer_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_downloader.py  test_summarizer.py
