[project]
name = "summarizer-app"
version = "0.1.0"
description = "PDF summarizer with Groq LLM"
requires-python = ">=3.11"

dependencies = [
    "streamlit>=1.38.0",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-core>=0.3.0",
    "pypdf>=4.3.0",
    "python-dotenv>=1.0.1",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.3",
    "python-docx>=1.1.2",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[tool.uv.sources]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
